--- a/website/index.html
+++ b/website/index.html
@@ -20,13 +20,11 @@
         text-align: center;
         font-family: Arial;
         text-transform: uppercase;
-        background-color: #ececec;
         margin: 0.5rem;
       }
 
       * {
         font-family: Arial;
-        color: grey;
       }
 
       table,
@@ -58,8 +56,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        box-shadow: inset 0px 1px 0 0 #fff;
-        background: linear-gradient(#f9f9f9 5%, #e9e9e9 100%);
+        background: #e9e9e9;
         border-radius: 4px;
         border: 1px solid #dcdcdc;
         text-decoration: none;
@@ -74,7 +71,6 @@
         align-items: center;
         justify-content: center;
         padding: 0 1rem 1rem;
-        text-align: left;
       }
 
       .inputs > * {
@@ -149,6 +145,20 @@
           value="+"
           onclick="onClickPlus()"
         />
+        <input
+          type="button"
+          id="circle-mode"
+          class="button"
+          value="circle"
+          onclick="onClickCircle()"
+        />
+        <input
+          type="button"
+          id="rectangle-mode"
+          class="button"
+          value="rectangle"
+          onclick="onClickRectangle()"
+        />
       </div>
     </div>
     <div class="row">
@@ -157,11 +167,21 @@
     </div>
     <script>
       let eraseMode = false;
+      let circleMode = true;
+      // colors which are reused
       const black = "#000000";
+      const active = "#778899";
+      const background = "#e9e9e9";
+
       let brushSize = 1;
+      const brushSteps = 2;
+      // we store the color for each pixel in here
+      const display = [];
+      // the web socket connection
       let connection;
 
       try {
+        // try to connect to the web socket server
         connection = new WebSocket("ws://" + location.hostname + ":81/", [
           "arduino"
         ]);
@@ -179,31 +199,45 @@
         };
       } catch (error) {}
 
+      // send the pixel data to the web socket server
       const sendPixel = (x, y, value) => {
         const data = { x, y };
+        // convert hex to rgb array
         const color = value.match(/[A-Za-z0-9]{2}/g).map(v => parseInt(v, 16));
         data.r = color[0];
         data.g = color[1];
         data.b = color[2];
-        if (connection.readyState === WebSocket.OPEN)
+        // avoid sending the same data multiple times
+        if (
+          connection.readyState === WebSocket.OPEN &&
+          value !== display[y][x]
+        ) {
           connection.send(JSON.stringify(data));
+          display[y][x] = value;
+        }
       };
 
-      const drawPixel = (m1, m2, value) => {
-        sendPixel(m1, m2, value);
+      // use the brush and change multiple pixels at the same time
+      const drawBrush = (brushX, brushY, value) => {
+        sendPixel(brushX, brushY, value);
         if (brushSize > 1) {
           const radius = Math.floor(brushSize / 2);
+          // loop through all surrounding pixels
           for (let x = -radius; x <= radius; x++) {
             for (let y = -radius; y <= radius; y++) {
+              // get distance for the current delta
               const distance = Math.sqrt(x * x + y * y);
-              if (distance <= radius) {
-                const xPos = parseInt(m1, 10) + x;
-                const yPos = parseInt(m2, 10) + y;
-                const target = document.querySelectorAll(
-                  `[data-x="${xPos}"][data-y="${yPos}"]`
-                )[0];
+              // get the current pixel position based on the brush position
+              const xPos = parseInt(brushX, 10) + x;
+              const yPos = parseInt(brushY, 10) + y;
+              // get the element at the pixel position
+              const target = document.querySelectorAll(
+                `[data-x="${xPos}"][data-y="${yPos}"]`
+              )[0];
 
-                if (target) {
+              if (target) {
+                // draw the pixel if it is inside the circle radius or rectangle
+                if ((circleMode && distance <= radius) || !circleMode) {
                   target.style.backgroundColor = value;
                   sendPixel(xPos, yPos, value);
                 }
@@ -217,48 +251,84 @@
       const quickFill = document.querySelector("#quick-fill");
       const quickClear = document.querySelector("#quick-clear");
       const brushSizeText = document.querySelector("#brush-size");
+      const drawModeBt = document.querySelector("#draw-mode");
+      const eraseModeBt = document.querySelector("#erase-mode");
+      const circleModeBt = document.querySelector("#circle-mode");
+      const rectangleModeBt = document.querySelector("#rectangle-mode");
+
+      // set default background colors for the switches
+      if (circleMode) circleModeBt.style.backgroundColor = active;
+      else rectangleModeBt.style.backgroundColor = active;
+      if (eraseMode) eraseModeBt.style.backgroundColor = active;
+      else drawModeBt.style.backgroundColor = active;
 
       const onClickMinus = () => {
-        brushSize -= 2;
-        if (brushSize < 1) brushSize = 1;
+        brushSize = Math.max(brushSize - brushSteps, 1);
         brushSizeText.innerHTML = brushSize;
       };
 
       const onClickPlus = () => {
-        brushSize += 2;
-        if (brushSize > 24) brushSize = 64;
+        brushSize = Math.min(brushSize + brushSteps, 32);
         brushSizeText.innerHTML = brushSize;
       };
 
       const onClickErase = () => {
         eraseMode = true;
+        eraseModeBt.style.backgroundColor = active;
+        drawModeBt.style.backgroundColor = background;
       };
 
       const onClickDraw = () => {
         eraseMode = false;
+        eraseModeBt.style.backgroundColor = background;
+        drawModeBt.style.backgroundColor = active;
+      };
+
+      const onClickCircle = () => {
+        circleMode = true;
+        circleModeBt.style.backgroundColor = active;
+        rectangleModeBt.style.backgroundColor = background;
+      };
+
+      const onClickRectangle = () => {
+        circleMode = false;
+        circleModeBt.style.backgroundColor = background;
+        rectangleModeBt.style.backgroundColor = active;
+      };
+
+      const getCurrentColor = () => {
+        return eraseMode
+          ? black
+          : document.querySelector("#color-picker").value;
       };
 
       const makeGrid = (gridWidth, gridHeight) => {
+        // clear the pixel canvas
         while (pixelCanvas.firstChild) {
           pixelCanvas.removeChild(pixelCanvas.firstChild);
         }
         for (let i = 0; i < gridHeight; i++) {
           let gridRow = document.createElement("tr");
           pixelCanvas.appendChild(gridRow);
+
+          const displayRow = [];
           for (let j = 0; j < gridWidth; j++) {
             const gridCell = document.createElement("td");
+            // make it easier to access the cell via position information
             gridCell.dataset.x = j;
             gridCell.dataset.y = i;
             gridCell.style.backgroundColor = black;
             gridRow.appendChild(gridCell);
             gridCell.addEventListener("mousedown", function() {
-              const color = eraseMode
-                ? black
-                : document.querySelector("#color-picker").value;
+              const color = getCurrentColor();
               this.style.backgroundColor = color;
-              drawPixel(this.dataset.x, this.dataset.y, color);
+              drawBrush(this.dataset.x, this.dataset.y, color);
             });
+
+            displayRow.push(black);
           }
+
+          display.push(displayRow);
         }
       };
 
@@ -276,20 +346,17 @@
       });
       pixelCanvas.addEventListener("mouseover", e => {
         if (mouseDown && e.target.tagName === "TD") {
-          const color = eraseMode
-            ? black
-            : document.querySelector("#color-picker").value;
-
+          const color = getCurrentColor();
           e.target.style.backgroundColor = color;
           const { x, y } = e.target.dataset;
-          drawPixel(x, y, color);
+          drawBrush(x, y, color);
         }
       });
       pixelCanvas.addEventListener("dblclick", e => {
         const color = black;
         e.target.style.backgroundColor = color;
         const { x, y } = e.target.dataset;
-        drawPixel(x, y, color);
+        drawBrush(x, y, color);
       });
 
       pixelCanvas.addEventListener("touchstart", () => {
@@ -308,13 +375,10 @@
         const target = document.elementFromPoint(xPos - x, yPos);
 
         if (touchDown && target.tagName === "TD") {
-          const color = eraseMode
-            ? black
-            : document.querySelector("#color-picker").value;
-
+          const color = getCurrentColor();
           target.style.backgroundColor = color;
           const { x, y } = target.dataset;
-          drawPixel(x, y, color);
+          drawBrush(x, y, color);
         }
       });
 
